tests/compile_fail/try_catch_message_lifetime.stderr
error[E0597]: `scope3` does not live long enough
  --> $DIR/try_catch_message_lifetime.rs:11:43
   |
9  |   let _message = {
   |       -------- borrow later stored here
10 |     let mut scope3 = v8::HandleScope::new(&mut scope2);
11 |     let mut scope4 = v8::HandleScope::new(&mut scope3);
   |                                           ^^^^^^^^^^^ borrowed value does not live long enough
...
14 |   };
   |   - `scope3` dropped here while still borrowed
